# GigaAM-API

./: .env.example  Dockerfile  Makefile  compose.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md  README.md  SERVER.md  USAGE.md
gigaam/: __init__.py  model.py  onnx_utils.py  preprocess.py  vad_utils.py
gigaam_server/: __init__.py  config.py  main.py
gigaam_server/api/: __init__.py
gigaam_server/api/v1/: router.py
gigaam_server/api/v1/endpoints/: health.py  models.py  streaming.py  transcriptions.py
gigaam_server/benchmarks/: __init__.py  test_benchmark.py
gigaam_server/schemas/: __init__.py  streaming.py  transcription.py
gigaam_server/services/: __init__.py  batching.py  diarization.py  diarization_streaming.py  model_manager.py  streaming.py  transcription.py
tools/: requirements.txt  stt_test_gradio.py
